Fixed CSS Overflow for cardContent hover

--- a/src/Components/QuoteComponents/QuoteCard.css
+++ b/src/Components/QuoteComponents/QuoteCard.css
@@ -18,6 +18,8 @@
 
 .cardContent:hover{
     background-color: #4d4646;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
 
 .quote{
@@ -123,11 +125,6 @@
 
 
 @media (min-width: 768px) and (max-width: 1080px){
-
-    body{
-        background-color:blue;
-
-    }
 
     .quoteCard{
         width: 29vw;
